--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "StudentContext": "DataSource=Student.db"
   },
   "Logging": {
     "LogLevel": {
